Migrate to java25